objects/Attendence__c.object
<CustomObject>
    <fields>
        <fullName>Course__c</fullName>
        <label>Course</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Present__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Present</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Student_ID__c</fullName>
        <label>Student ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Attendence</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Attendence Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attendences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>